# arcglyph

./: Cargo.toml  README.md  install-desktop.sh  run-sudo.sh  run.sh  setup-perms.sh
.github/workflows/: build.yml
assets/: kwin-focus.js
packaging/: arcglyph.desktop
src/: autostart.rs  config.rs  daemon.rs  devices.rs  focus.rs  gesture.rs  gui.rs  i18n.rs  injector.rs  keys.rs  lib.rs  overlay.rs  perms.rs  tray.rs
