[package]
name = "arcglyph"
version = "0.3.0"
edition = "2021"
description = "Elegant right-click mouse-gesture daemon for Wayland (KDE Plasma)"
license = "MIT"
homepage = "https://github.com/lu5je0/arcglyph"
repository = "https://github.com/lu5je0/arcglyph"

[lib]
name = "arcglyph"
path = "src/lib.rs"

[[bin]]
name = "arcglyph"
path = "src/bin/arcglyph.rs"

[dependencies]
evdev = "0.12"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
anyhow = "1"
nix = { version = "0.29", features = ["poll", "inotify"] }
smithay-client-toolkit = "0.19"
tiny-skia = "0.11"
iced = { version = "0.13", features = ["tokio"] }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "time", "sync"] }
ksni = "0.3"
dbus = "0.9"
tempfile = "3"

[profile.release]
lto = true
opt-level = "z"
strip = true

[package.metadata.deb]
maintainer = "lu5je0"
copyright = "2026, lu5je0"
extended-description = """\
Arcglyph is a mouse-gesture daemon for Wayland (KDE Plasma). Hold the right \
mouse button, draw a shape, release, and it forwards the mapped keyboard \
shortcut to the focused app. Ships with a tray control and an inline GUI editor."""
section = "utils"
priority = "optional"
depends = "$auto, libwayland-client0, libdbus-1-3, libfontconfig1"
assets = [
    ["target/release/arcglyph", "usr/bin/", "755"],
    ["packaging/arcglyph.desktop", "usr/share/applications/", "644"],
    ["packaging/60-arcglyph-uinput.rules", "usr/lib/udev/rules.d/", "644"],
    ["README.md", "usr/share/doc/arcglyph/README.md", "644"],
]
